--- a/AngularProject/src/app/nav-bar/nav-bar.component.html
+++ b/AngularProject/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,26 @@
 <header>
-    <mat-toolbar>
+    
+    <div class="container">
+      <div class="left">
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-       <mat-icon>menu</mat-icon>
+       <mat-icon class="white">menu</mat-icon>
      </button>
-     <span>Волонтери</span>
-     <span class="example-spacer"></span>Платформа за волонтирање во случај на шумски пожари<span class="example-spacer"></span>
-     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-     </button>
-     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-   </mat-toolbar>
+     <span class="white">Волонтери</span>
+      </div>
+
+      <div class="center main-name">
+      <span>Платформа за волонтирање во случај на шумски пожари</span>
+      </div>
+
+      <div class="right">
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" class="white">home</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon class="white">share</mat-icon>
+      </button>
+      </div>
+
+  </div>
+   
   </header>
