--- a/AngularProject/src/app/app.component.html
+++ b/AngularProject/src/app/app.component.html
@@ -1,37 +1,24 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-nav-bar></app-nav-bar>
-<br>
-<br>
-<h1 style="margin: auto; width: 50%;">Избери град на кој што сакаш да помогнеш</h1>
+<br><br><br>
+<h1>Избери град каде што сакаш да помогнеш</h1>
+<br><br><br>
 <app-map></app-map>
-<mat-checkbox>Check me out</mat-checkbox>
-<button mat-button>Basic</button>
-<button mat-button color="primary">Primary</button>
-<button mat-button color="warn">Warn</button>
-<button mat-button color="accent">Accent</button>
-<button mat-button disabled>Disabled</button>
 
-<mat-select #mode value="side">
-<mat-option value="side">Side</mat-option>
-<mat-option value="over">Over</mat-option>
-<mat-option value="push">Push</mat-option>
-</mat-select>
-<br><br><br><br><br><br><br><br><br>
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<footer>
+<br><br>
 
+<div class="flex">
+<div class="item"><img alt="photo1" src="../assets/photo1.png">
+<p>Шумските пожари настануваат во области кои што се лесно запаливи, обично во руралните области. fdasfdsadsfdasfdsfdfsadasfdasffadsdsfadfsadfsadfsfdasdfsadsffddasfdasdasffads</p>
+
+</div>
+<div class="item"><img alt="photo2" src="../assets/photo2.png"></div>
+<div class="item"><img alt="photo3" src="../assets/photo3.png"></div>
+</div>
+
+<br><br><br>
+<button mat-stroked-button>Пријави се за пренос на волонтери со возило</button>
+</footer>
 <router-outlet></router-outlet>
