--- a/AngularProject/src/app/nav-bar/nav-bar.component.css
+++ b/AngularProject/src/app/nav-bar/nav-bar.component.css
@@ -1,4 +1,22 @@
-.example-spacer {
-    margin-left: 10%;
-    margin-right: 10%;
+  .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
   }
+
+  .main-name{
+    font-size: xx-large;
+    color: whitesmoke;
+    padding-top: 10px;
+  }
+
+  header{
+    background-color: rgb(202, 50, 50);
+    padding: 10px;
+    font-family: 'Century Gothic';
+  }
+
+  .white{
+    color: white;
+  }
+
