--- a/AngularProject/src/app/app.component.html
+++ b/AngularProject/src/app/app.component.html
@@ -6,12 +6,15 @@
 <app-map></app-map>
 
 
+
 <footer>
+    <br><br>
+    <app-firstdialog></app-firstdialog>
 <br><br>
 
 <div class="flex">
 <div class="item"><img alt="photo1" src="../assets/photo1.png">
-<p>Шумските пожари настануваат во области кои што се лесно запаливи, обично во руралните области. fdasfdsadsfdasfdsfdfsadasfdasffadsdsfadfsadfsadfsfdasdfsadsffddasfdasdasffads</p>
+<p>Шумските пожари настануваат во области од Македонија кои што се покриени со лесно запалива вегетација, обично во руралните области. </p>
 
 </div>
 <div class="item"><img alt="photo2" src="../assets/photo2.png"></div>
