--- a/AngularProject/src/app/app.component.html
+++ b/AngularProject/src/app/app.component.html
@@ -9,16 +9,21 @@
 
 <footer>
     <br><br>
-    <app-firstdialog></app-firstdialog>
 <br><br>
 
 <div class="flex">
-<div class="item"><img alt="photo1" src="../assets/photo1.png">
-<p>Шумските пожари настануваат во области од Македонија кои што се покриени со лесно запалива вегетација, обично во руралните области. </p>
-
+<div class="item">
+    <img alt="photo1" src="../assets/photo1.png">
+    <p>Шумските пожари настануваат во области од Македонија кои што се покриени со лесно запалива вегетација, обично во руралните средини. </p>
 </div>
-<div class="item"><img alt="photo2" src="../assets/photo2.png"></div>
-<div class="item"><img alt="photo3" src="../assets/photo3.png"></div>
+<div class="item">
+    <img alt="photo2" src="../assets/photo2.png">
+    <p>Најголем предизвикувач на шумски пожари претставуваат луѓето. Од невнимание како палење на оган или фрлање на запалена цигара, до намерно потпалување на шумите, над 95% од шумските пожари вклучуваат човечки фактор</p>
+</div>
+<div class="item">
+    <img alt="photo3" src="../assets/photo3.png">
+    <p>На глобално ниво, чадот кој што го создаваат шумските пожари се смета дека предизвикува предвремена смрт на 339 000 луѓе секоја година. </p>
+</div>
 </div>
 
 <br><br><br>
