--- a/AngularProject/src/app/app.component.html
+++ b/AngularProject/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 
 
-<footer>
+<div class="middle">
     <br><br>
 <br><br>
 
@@ -18,7 +18,7 @@
 </div>
 <div class="item">
     <img alt="photo2" src="../assets/photo2.png">
-    <p>Најголем предизвикувач на шумски пожари претставуваат луѓето. Од невнимание како палење на оган или фрлање на запалена цигара, до намерно потпалување на шумите, над 95% од шумските пожари вклучуваат човечки фактор</p>
+    <p>Најголем предизвикувач на шумски пожари претставуваат луѓето. Од невнимание како несовесно палење на оган или фрлање на запалена цигара, до намерно потпалување на шумите, над 95% од шумските пожари вклучуваат човечки фактор.</p>
 </div>
 <div class="item">
     <img alt="photo3" src="../assets/photo3.png">
@@ -28,5 +28,16 @@
 
 <br><br><br>
 <button mat-stroked-button>Пријави се за пренос на волонтери со возило</button>
+</div>
+<footer>
+<button mat-stroked-button class="white">За тимот</button>
+
+
+
+
+
+
+
+
 </footer>
 <router-outlet></router-outlet>
