--- a/AngularProject/src/app/home/home.component.html
+++ b/AngularProject/src/app/home/home.component.html
@@ -2,6 +2,7 @@
     <mat-sidenav [opened]="'true'">
         <button routerLink="/team" mat-stroked-button class="white">За тимот</button>
         <button routerLink="/about" mat-stroked-button class="white">Идеја</button>
+        <button routerLink="/driverform" mat-stroked-button class="white">Аплицирај за превоз</button>
     </mat-sidenav>
     <mat-sidenav-content>
 
