--- a/AngularProject/src/app/home/home.component.html
+++ b/AngularProject/src/app/home/home.component.html
@@ -31,6 +31,9 @@
 <br><br><br>
 </div>
 <footer>
+    <mat-icon>facebook</mat-icon>
+    <mat-icon>share</mat-icon>
+    <mat-icon>home</mat-icon>
 <button routerLink="/team" mat-stroked-button class="white">За тимот</button>
 </footer>
     </mat-sidenav-content>
