--- a/AngularProject/src/app/teampage/teampage.component.html
+++ b/AngularProject/src/app/teampage/teampage.component.html
@@ -1,7 +1,8 @@
-<br><br><br>
+<br><br><br><br><br>
 
 <div class="flex">
 <h2>Членови на тимот:</h2>
+<br><br><br>
 </div>
 <div class="flex">
   <mat-card class="example-card">
@@ -15,6 +16,9 @@
         Благој Петков е студент на ФИНКИ во трета година.
       </p>
     </mat-card-content>
+    <mat-card-actions>
+      <a href="https://www.facebook.com/b.5kov/"><mat-icon>facebook</mat-icon></a>
+    </mat-card-actions>
   </mat-card>
 
   <mat-card class="example-card">
@@ -28,6 +32,9 @@
         Ангела Муканова е студентка на ФИНКИ во трета година.
       </p>
     </mat-card-content>
+    <mat-card-actions>
+      <a href="https://www.facebook.com/mukanovaangela"><mat-icon>facebook</mat-icon></a>
+    </mat-card-actions>
   </mat-card>
 
   <mat-card class="example-card">
@@ -41,6 +48,9 @@
         Јована Томоска е студентка на ФИНКИ во четврта година.
       </p>
     </mat-card-content>
+    <mat-card-actions>
+      <a href="https://www.facebook.com/jovana.tomoska"><mat-icon>facebook</mat-icon></a>
+    </mat-card-actions>
   </mat-card>
 
   <mat-card class="example-card">
@@ -54,5 +64,8 @@
         Маја Петрова е студентка на ФИНКИ во трета година.
       </p>
     </mat-card-content>
+    <mat-card-actions>
+      <a href="https://www.facebook.com/maja.petrova.31"><mat-icon>facebook</mat-icon></a>
+    </mat-card-actions>
   </mat-card>
 </div>
