--- a/AngularProject/src/app/driverform/driverform.component.html
+++ b/AngularProject/src/app/driverform/driverform.component.html
@@ -9,6 +9,7 @@
                     </div>
                     <hr>
                     <br>
+                    <form>
 
                     <mat-form-field appearance="fill">
                         <mat-label>Име</mat-label>
@@ -69,6 +70,8 @@
                     <div class="text-center mt-4">
                         <button mat-raised-button color="warn" routerLink="/home">Submit</button>
                     </div>
+
+                  </form>
                 </div>
             </div>
     </div>
