--- a/AngularProject/src/app/driverspage/driverspage.component.html
+++ b/AngularProject/src/app/driverspage/driverspage.component.html
@@ -26,7 +26,7 @@
 
 
     <ng-container matColumnDef="fromto">
-      <th mat-header-cell *matHeaderCellDef> Од - до</th>
+      <th mat-header-cell *matHeaderCellDef> Од град - до град</th>
       <td mat-cell *matCellDef="let element"> {{element.fromto}} </td>
     </ng-container>
 
