--- a/AngularProject/src/app/nav-bar/nav-bar.component.html
+++ b/AngularProject/src/app/nav-bar/nav-bar.component.html
@@ -13,10 +13,10 @@
       </div>
 
       <div class="right">
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <button routerLink="/home" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
         <mat-icon aria-hidden="false" aria-label="Example home icon" class="white">home</mat-icon>
       </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <button routerLink="/team" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon class="white">share</mat-icon>
       </button>
       </div>
