--- a/AngularProject/src/app/aboutpage/aboutpage.component.html
+++ b/AngularProject/src/app/aboutpage/aboutpage.component.html
@@ -1,8 +1,26 @@
 <div class="main">
 
-<div class="text"><p>Поради лошата состојба на противпожарните единици во Македонија, способноста да се справиме со шумски пожари е многу ограничена.
-    Пожарникарите - доброволци претставуваат интегрален дел од борбата против шумските пожари кои што за краток период можат да
-    нанесат голема штета на растителниот и животински свет.
-    Поради тоа, клучно е да се овозможи и да се поттикне акција кај граѓаните кои се способни да волонтираат и да спречат пламените јазици да се
-    прошират. Оваа веб апликација овозможува едноставна организација на доброволните капацитети.</p></div>
-</div>
+    <div class="text">
+        <img src="../../assets/11.png">
+        <span class="font">Идеја за креирање на апликацијата</span>
+        <br/><br>
+        <p id="paragraph">Поради лошата состојба на противпожарните единици во Македонија, способноста да се справиме со шумски пожари е многу ограничена.
+            Пожарникарите - доброволци претставуваат интегрален дел од борбата против шумските пожари кои што за краток период можат да
+            нанесат голема штета на растителниот и животински свет.
+            Поради тоа, клучно е да се овозможи и да се поттикне акција кај граѓаните кои се способни да волонтираат и да спречат пламените јазици да се
+            прошират. Оваа веб апликација овозможува едноставна организација на доброволните капацитети.
+        </p>
+        <br>
+        <br>
+        <img id="second" src="../../assets/inform1.png">
+        <span>Генерален преглед на апликацијата</span>
+        <br><br>
+        <p>
+            Апликацијата овозможува пристап на корисниците кои сакаат да волонтираат. 
+            Истите одбираат град од прикажаната мапа каде што има пожар и при тоа им се појавуваат опции од кои може да изберат на кој 
+            начин би сакале да помогнат. Тие исто така може да се пријават како волонтери или луѓе кои сакаат да пренесуваат волонтери.
+            Опцијата за пренос на волонтери се наоѓа во главното мени под името "Аплицирај за превоз"  каде што ќе можат да пополнат форма со 
+            соодветните информации.
+        </p>
+    </div>
+    
