--- a/AngularProject/src/app/home/home.component.html
+++ b/AngularProject/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 <br><br><br>
 </div>
 <footer>
-    <mat-icon>facebook</mat-icon>
-    <mat-icon>share</mat-icon>
-    <mat-icon>home</mat-icon>
+    <mat-icon class="white" style="margin-right:8px;">facebook</mat-icon>
+    <mat-icon class="white" style="margin-right:8px;">share</mat-icon>
+    <mat-icon class="white" style="margin-right:8px;">home</mat-icon>
 </footer>
