--- a/AngularProject/src/app/aboutpage/aboutpage.component.css
+++ b/AngularProject/src/app/aboutpage/aboutpage.component.css
@@ -1,12 +1,29 @@
 .text{
     width: 800px;
-    height: 200px;
     font-family: Verdana;
     font-size: x-large;
+    
 }
 .main{
-    height: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 70px;
+}
+span{
+    font-family:'Century Gothic';
+    font-size: 35px;
+    height: 38px;
+    
+}
+p{
+    margin-left: 45px;
+    width: 700px;
+    font-family: 'Century Gothic';
+    font-size: 21px;
+}
+img{
+    height: 38px;
+    width: 42px;
+    margin-right: 5px;
 }
