--- a/AngularProject/src/app/home/home.component.css
+++ b/AngularProject/src/app/home/home.component.css
@@ -18,7 +18,8 @@ h1{
         width: 350px;
         height: 500px;
         font-size: 18px;
-        font-family: 'Impact';
+        font-family: 'Century Gothic';
+        font-weight: bold;
 
 }
 .item img {
