--- a/AngularProject/src/app/map/dialog.html
+++ b/AngularProject/src/app/map/dialog.html
@@ -11,16 +11,16 @@
     <p *ngIf="city.tractors>0">Број на потребна механизација - трактори: {{city.tractors}}</p>
     <p>Потребни алатки за пожарникарите: {{city.tools}}</p>
     <mat-divider></mat-divider>
-    <p *ngIf="city.volunteers>0"><mat-checkbox>Аплицирам како волонтер - пожарникар</mat-checkbox></p>
-    <p *ngIf="city.young_volunteers>0"><mat-checkbox>Аплицирам како помошник</mat-checkbox></p>
-    <p *ngIf="city.firetrucks>0"><mat-checkbox>Аплицирам да обезбедам механизација - противпожарно возило</mat-checkbox></p>
-    <p *ngIf="city.watertenders>0"><mat-checkbox>Аплицирам да обезбедам механизација - цистерна за вода</mat-checkbox></p>
-    <p *ngIf="city.tractors>0"><mat-checkbox>Аплицирам да обезбедам механизација - трактор</mat-checkbox></p>
-    <p><mat-checkbox>Аплицирам да обезбедам потребни алатки за пожарникарите</mat-checkbox></p>
+    <p *ngIf="city.volunteers>0"><mat-checkbox [(ngModel)]="checked1">Аплицирам како волонтер - пожарникар</mat-checkbox></p>
+    <p *ngIf="city.young_volunteers>0"><mat-checkbox [(ngModel)]="checked2">Аплицирам како помошник</mat-checkbox></p>
+    <p *ngIf="city.firetrucks>0"><mat-checkbox [(ngModel)]="checked3">Аплицирам да обезбедам механизација - противпожарно возило</mat-checkbox></p>
+    <p *ngIf="city.watertenders>0"><mat-checkbox [(ngModel)]="checked4">Аплицирам да обезбедам механизација - цистерна за вода</mat-checkbox></p>
+    <p *ngIf="city.tractors>0"><mat-checkbox [(ngModel)]="checked5">Аплицирам да обезбедам механизација - трактор</mat-checkbox></p>
+    <p><mat-checkbox [(ngModel)]="checked6">Аплицирам да обезбедам потребни алатки за пожарникарите</mat-checkbox></p>
 
 
 
-    <button mat-button (click) = "apply()">Аплицирај</button>
+    <button type="submit" [disabled]="!checked1 && !checked2 && !checked3 && !checked4 && !checked5 && !checked6" mat-button (click) = "apply()">Аплицирај</button>
     <button mat-button (click) = "cancel()">Откажи</button>
 
 
